# mlops_project

./: .dockerignore  .gitignore  README.md  Untitled-1.yaml  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/backend/: main.py  model.py
frontend/: Dockerfile  pyproject.toml
models/: model.pkl
my_ml_project/: README.md  pyproject.toml
notebooks/: ravana-gurbanova-eda.ipynb  ravana-gurbanova-fe1.ipynb  ravana-gurbanova-fe2.ipynb  ravana-gurbanova-trainmodel.ipynb
ravana.gurbanova17@gmail.com/: README.md  pyproject.toml
src/data/: make_dataset.py
src/models/: predict_model.py  train_model.py
