[project]
name = "mlops_project"
version = "0.1.0"
description = "Reproducible ML project scaffold powered by uv"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "RavanaGurbanova8", email = "ravana.gurbanova17@gmail.com" }]
dependencies = [
    "pandas>=2.3.1",
    # runtime deps go here, e.g. "pandas>=2.2"
    "requests>=2.32.4",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
src_paths = ["src"]
extend_skip = ["data", "reports", "models", "notebooks"]
